TEST_PROGRAMS/VALID/05/top_var_string_single_no_init_type.go
/* Types. */

package main

var e string
   
func main() {
	//x = 1
}
