TEST_PROGRAMS/INVALID/04/64.go
package main

func main() {
    var x = 2

    //Illegal operator
    x+ +
}
